--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,41 +1,30 @@
-.app {
-  display: flex;
-  flex-direction: row;
-  height: 100vh;
-  width: 100vw;
-  font-family: sans-serif;
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
 }
-
-.textarea {
-  flex: 1;
-  padding: 1rem;
-  font-size: 1rem;
-  border: none;
-  resize: none;
-  background-color: #f5f5f5;
+.app{
+    display: flex;
+    justify-content:space-between;
+    height:100vh;
+    width: 100%;
+    padding:1.5rem;
+    gap:1px;
 }
+    
 
-.preview {
-  flex: 1;
-  padding: 1rem;
-  background-color: #fff;
-  overflow-y: auto;
+.textarea{
+ height:70%;
+ width:50%;
+ background-color:rgb(240, 240, 240) ;
+ outline: none;
+ border:none;
+ padding:15px;
 }
-
-.loading {
-  text-align: center;
-  font-style: italic;
-  color: #666;
-}
-
-h1 {
-  color: #27aedb;
-  text-align: center;
-}
-
-button {
-  color: #27aedb;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
+.preview{
+    height:70%;
+    width:50%;
+    padding:15px;
+    background-color: rgb(197, 197, 197);
+    overflow:auto;
 }
