--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,37 +1,29 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .app {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    padding: 20px;
-}
+  display: flex;
+  height: 100vh;
 
-.textarea {
+  .textarea,
+  .preview {
     flex: 1;
-    margin-right: 20px;
-}
-
-.textarea textarea {
-    width: 100%;
-    height: 100%;
     padding: 10px;
-    font-size: 16px;
-}
+    border: none;
+    outline: none;
+  }
 
-.preview {
-    flex: 1;
-    height: 100%;
-    border: 1px solid #ccc;
-    padding: 10px;
-}
+  .textarea {
+    font-size: 1.5rem;
+    resize: none;
+    background-color: #eff1f5;
+  }
 
-.loading {
-    font-size: 18px;
-    font-weight: bold;
-    color: #333;
+  .preview {
+    overflow-y: auto;
+    background-color: #e8eaf1;
+  }
 }
