--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -16,7 +16,7 @@ body {
   padding: 10px;
   border:none;
   outline: none;
-  height: 93vh; 
+  height: 96vh; 
   background-color: #f0eeee;
 }
 
@@ -26,8 +26,8 @@ body {
 }
 .markdown-preview p {
   text-align: left;
-  margin-top: 0;
-  font-size: 28px;
-  font-weight: 500;
+  margin-top: 2px;
+  font-size: 24px;
+  font-weight: 600;
   margin-left: 6px;
 }
